fixed horizontal scroll on mobile decades pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,8 +156,15 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+.slick-list { margin: 0 -5px; }
+.slick-slide { padding: 0 5px; }
+
+.slick-prev:before, .slick-next:before {
+    color: black;
+}
   
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 768px) {
     .nav-container {
       -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -217,8 +224,23 @@
       z-index: 1;
     }
 
+    .berkeley-map {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
     .slick-prev:before, .slick-next:before {
-        display: none;
+        color: rgba(0,0,0,0);
+    }
+
+    .slick-prev {
+        left: 0px;
+        z-index: 1;
+    }
+    
+    .slick-next {
+        right: 0px;
+        z-index: 1;
     }
 }  
 
@@ -241,10 +263,6 @@ h1 {
     margin: auto;
 }
 
-.align-items-center {
-    max-width: 100%;
-}
-
 .image-responsive {
     display: block;
     width: 100%;
@@ -257,13 +275,6 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     padding: 15px;
-}
-
-.slick-list { margin: 0 -5px; }
-.slick-slide { padding: 0 5px; }
-
-.slick-prev:before, .slick-next:before {
-    color: black;
 }
 
 .hero-container {
@@ -284,9 +295,9 @@ h1 {
     top: 0;
     width: 100%;
     height: 100%;
-    max-width: 100%;
 }
   
 .video-wrap {
     width: 100%;
 }
+
